ainterp/parser/parser.js
// @generated by Peggy 5.0.6.
//
// https://peggyjs.org/

"use strict";


    const methods = require('./methods.js');

class peg$SyntaxError extends SyntaxError {
  constructor(message, expected, found, location) {
    super(message);
    this.expected = expected;
    this.found = found;
    this.location = location;
    this.name = "SyntaxError";
  }

  format(sources) {
    let str = "Error: " + this.message;
    if (this.location) {
      let src = null;
      const st = sources.find(s => s.source === this.location.source);
      if (st) {
        src = st.text.split(/\r\n|\n|\r/g);
      }
      const s = this.location.start;
      const offset_s = (this.location.source && (typeof this.location.source.offset === "function"))
        ? this.location.source.offset(s)
        : s;
      const loc = this.location.source + ":" + offset_s.line + ":" + offset_s.column;
      if (src) {
        const e = this.location.end;
        const filler = "".padEnd(offset_s.line.toString().length, " ");
        const line = src[s.line - 1];
        const last = s.line === e.line ? e.column : line.length + 1;
        const hatLen = (last - s.column) || 1;
        str += "\n --> " + loc + "\n"
            + filler + " |\n"
            + offset_s.line + " | " + line + "\n"
            + filler + " | " + "".padEnd(s.column - 1, " ")
            + "".padEnd(hatLen, "^");
      } else {
        str += "\n at " + loc;
      }
    }
    return str;
  }

  static buildMessage(expected, found) {
    function hex(ch) {
      return ch.codePointAt(0).toString(16).toUpperCase();
    }

    const nonPrintable = Object.prototype.hasOwnProperty.call(RegExp.prototype, "unicode")
      ? new RegExp("[\\p{C}\\p{Mn}\\p{Mc}]", "gu")
      : null;
    function unicodeEscape(s) {
      if (nonPrintable) {
        return s.replace(nonPrintable,  ch => "\\u{" + hex(ch) + "}");
      }
      return s;
    }

    function literalEscape(s) {
      return unicodeEscape(s
        .replace(/\\/g, "\\\\")
        .replace(/"/g,  "\\\"")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,          ch => "\\x0" + hex(ch))
        .replace(/[\x10-\x1F\x7F-\x9F]/g, ch => "\\x"  + hex(ch)));
    }

    function classEscape(s) {
      return unicodeEscape(s
        .replace(/\\/g, "\\\\")
        .replace(/\]/g, "\\]")
        .replace(/\^/g, "\\^")
        .replace(/-/g,  "\\-")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,          ch => "\\x0" + hex(ch))
        .replace(/[\x10-\x1F\x7F-\x9F]/g, ch => "\\x"  + hex(ch)));
    }

    const DESCRIBE_EXPECTATION_FNS = {
      literal(expectation) {
        return "\"" + literalEscape(expectation.text) + "\"";
      },

      class(expectation) {
        const escapedParts = expectation.parts.map(
          part => (Array.isArray(part)
            ? classEscape(part[0]) + "-" + classEscape(part[1])
            : classEscape(part))
        );

        return "[" + (expectation.inverted ? "^" : "") + escapedParts.join("") + "]" + (expectation.unicode ? "u" : "");
      },

      any() {
        return "any character";
      },

      end() {
        return "end of input";
      },

      other(expectation) {
        return expectation.description;
      },
    };

    function describeExpectation(expectation) {
      return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
    }

    function describeExpected(expected) {
      const descriptions = expected.map(describeExpectation);
      descriptions.sort();

      if (descriptions.length > 0) {
        let j = 1;
        for (let i = 1; i < descriptions.length; i++) {
          if (descriptions[i - 1] !== descriptions[i]) {
            descriptions[j] = descriptions[i];
            j++;
          }
        }
        descriptions.length = j;
      }

      switch (descriptions.length) {
        case 1:
          return descriptions[0];

        case 2:
          return descriptions[0] + " or " + descriptions[1];

        default:
          return descriptions.slice(0, -1).join(", ")
            + ", or "
            + descriptions[descriptions.length - 1];
      }
    }

    function describeFound(found) {
      return found ? "\"" + literalEscape(found) + "\"" : "end of input";
    }

    return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
  }
}

function peg$parse(input, options) {
  options = options !== undefined ? options : {};

  const peg$FAILED = {};
  const peg$source = options.grammarSource;

  const peg$startRuleFunctions = {
    start: peg$parsestart,
  };
  let peg$startRuleFunction = peg$parsestart;

  const peg$c0 = "#";
  const peg$c1 = "var";
  const peg$c2 = "=";
  const peg$c3 = ",";
  const peg$c4 = ".";
  const peg$c5 = "(";
  const peg$c6 = ")";
  const peg$c7 = "\"";
  const peg$c8 = "\\\\";
  const peg$c9 = "\\\"";
  const peg$c10 = "\\r";
  const peg$c11 = "\\n";
  const peg$c12 = "km";
  const peg$c13 = "m";
  const peg$c14 = "mi";
  const peg$c15 = "ft";
  const peg$c16 = "-";
  const peg$c17 = "0";
  const peg$c18 = "\r";
  const peg$c19 = "\n";

  const peg$r0 = /^[^\r\n]/;
  const peg$r1 = /^[^\r\n\\"]/;
  const peg$r2 = /^[0-9]/;
  const peg$r3 = /^[1-9]/;
  const peg$r4 = /^[a-zA-Z]/;
  const peg$r5 = /^[a-zA-Z0-9]/;
  const peg$r6 = /^[ \t]/;

  const peg$e0 = peg$anyExpectation();
  const peg$e1 = peg$literalExpectation("#", false);
  const peg$e2 = peg$classExpectation(["\r", "\n"], true, false, false);
  const peg$e3 = peg$literalExpectation("var", false);
  const peg$e4 = peg$literalExpectation("=", false);
  const peg$e5 = peg$literalExpectation(",", false);
  const peg$e6 = peg$literalExpectation(".", false);
  const peg$e7 = peg$literalExpectation("(", false);
  const peg$e8 = peg$literalExpectation(")", false);
  const peg$e9 = peg$literalExpectation("\"", false);
  const peg$e10 = peg$classExpectation(["\r", "\n", "\\", "\""], true, false, false);
  const peg$e11 = peg$literalExpectation("\\\\", false);
  const peg$e12 = peg$literalExpectation("\\\"", false);
  const peg$e13 = peg$literalExpectation("\\r", false);
  const peg$e14 = peg$literalExpectation("\\n", false);
  const peg$e15 = peg$literalExpectation("km", false);
  const peg$e16 = peg$literalExpectation("m", false);
  const peg$e17 = peg$literalExpectation("mi", false);
  const peg$e18 = peg$literalExpectation("ft", false);
  const peg$e19 = peg$literalExpectation("-", false);
  const peg$e20 = peg$literalExpectation("0", false);
  const peg$e21 = peg$classExpectation([["0", "9"]], false, false, false);
  const peg$e22 = peg$classExpectation([["1", "9"]], false, false, false);
  const peg$e23 = peg$classExpectation([["a", "z"], ["A", "Z"]], false, false, false);
  const peg$e24 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"]], false, false, false);
  const peg$e25 = peg$classExpectation([" ", "\t"], false, false, false);
  const peg$e26 = peg$literalExpectation("\r", false);
  const peg$e27 = peg$literalExpectation("\n", false);

  function peg$f0(stmts) {
    let allVarDefinition = "CREATE TEMPORARY TABLE _var_nodes_all AS SELECT * FROM nodes;\n";
    allVarDefinition += "CREATE TEMPORARY TABLE _var_ways_all AS SELECT * FROM ways;\n";
    allVarDefinition += "CREATE TEMPORARY TABLE _var_relations_all AS SELECT * FROM relations;\n";
    return allVarDefinition + stmts.value;
  }
  function peg$f1(stmts) {
    const value = stmts.reduce((acc, statement) => {
        return acc + statement.value;
    },
    "");

    return {type: "statements", value: value};
  }
  function peg$f2(expression) {
    return {type: "statement", value: expression.value};

  }
  function peg$f3(declaration) {
    return {type: "statement", value: declaration.value};

  }
  function peg$f4(comment) {
    return {type: "statement", value: comment.value};

  }
  function peg$f5(blank) {
    return {type: "statement", value: blank.value};
  }
  function peg$f6() {
    return {type: "comment_statement", value: ""};
  }
  function peg$f7() {
    return {type: "blank_statement", value: ""};
  }
  function peg$f8(lbl, expr) {
    if (expr.variant === "literal") {
        console.error("Error: You may not declare a variable to be a literal. You can only store Nodes, Ways, and Relations in variables.");
        process.exit(1);
    }
    
    const nodes = `CREATE TEMPORARY TABLE _var_nodes_${lbl.value} AS SELECT * FROM ${expr.tables.nodes};\n` 
    const ways = `CREATE TEMPORARY TABLE _var_ways_${lbl.value} AS SELECT * FROM ${expr.tables.ways};\n`
    const relations = `CREATE TEMPORARY TABLE _var_relations_${lbl.value} AS SELECT * FROM ${expr.tables.relations};\n`
    
    return {type: "declaration_statement", value: expr.value + nodes + ways + relations};
  }
  function peg$f9(expr) {
    if (expr.variant === "method_call") {
        return {type: "expression_statement",  value: expr.value};
    }
    return {type: "expression_statement", value: ""}; 
  }
  function peg$f10(firstParm, restParms) {
    let value = [firstParm];
    for (let current of restParms) {
        value.push(current[2]);
    }

    return {type: "parameters", value: value};
  }
  function peg$f11() {
    return {type: "parameters", value: []};
  }
  function peg$f12(method) {
    return {
            type: "expression",
            variant: "method_call",
            value: method.value, 
            tables: {
                nodes: method.tables.nodes,
                ways: method.tables.ways,
                relations: method.tables.relations
            }
        };
  }
  function peg$f13(ltrl) {
    return {type: "expression", variant: "literal", subvariant: ltrl.variant, value: ltrl.value};
  }
  function peg$f14(variable, calls) {
    let methodObject = {
        type: "n/a", 
        value: "", 
        tables:{
            nodes:`_var_nodes_${variable.value}`, 
            ways: `_var_ways_${variable.value}`,
            relations: `_var_relations_${variable.value}`
        }
    };

    for (let call of calls) {
        if (call[1].value in methods) {
            methods[call[1].value](methodObject, call[3].value);
        } else {
            console.error(`Error: The method that was called ${call[1].value} does not exist`);
            process.exit(1);
        }
    }

    return {type: "method_call", value: methodObject.value, tables: {nodes: methodObject.tables.nodes, ways: methodObject.tables.ways, relations: methodObject.tables.relations}};

  }
  function peg$f15(string) {
    return {type: "literal", variant: "string_literal", value: string.value};
  }
  function peg$f16(distance) {
    return {
        type: "literal", variant: "distance_literal", 
        value: distance.value, unit: distance.unit
    };
  }
  function peg$f17(number) {
    return {type: "literal", variant: "number_literal", value: number.value};
  }
  function peg$f18(string) {
    const processedValues = string.filter((value) => {
        switch(char) {
            case '\\\\':
                return '\\';
            break;
            case '\\"':
                return '\"';
            break;
            case '\\r':
                return '\r';
            break;
            case '\\n':
                return '\n';
            break;
            default:
                return value;
        }
    });

    return {type: "string_literal", value: processedValues.join('')}; 
  }
  function peg$f19(number, unit) {
    return {type: "distance_literal", value: number, unit: unit};
  }
  function peg$f20(sign, leadingZero, postDecimalDigits) {
    let numberString = (sign !== null) ? sign: "";  
    numberString += (leadingZero !== null) ? leadingZero: "";
    numberString += ".";
    numberString += (postDecimalDigits !== null) ? postDecimalDigits.join(''): "";
    return {type: "number_literal", value: parseFloat(numberString)};
  }
  function peg$f21(sign, leadingDigit, remainingDigits, postDecimalDigits) {
    let numberString = (sign !== null) ? sign: "";  
    numberString += leadingDigit;
    numberString += (remainingDigits !== null) ? remainingDigits.join(''): "";
    numberString += ".";
    numberString += (postDecimalDigits !== null) ? postDecimalDigits.join(''): "";
    return {type: "number_literal", value: parseFloat(numberString)};
  }
  function peg$f22(sign, leadingDigit, remainingDigits) {
    return {
        type: "number_literal", 
        value: parseFloat(((sign !== null) ? sign: "") + leadingDigit + ((remainingDigits !== null) ? remainingDigits.join(''): ""))
    };
  }
  function peg$f23(leadingChar, remainingChars) {
    return {
        type: "label",
        value: leadingChar + ((remainingChars !== null) ? remainingChars.join(''): "")
    };
  }
  let peg$currPos = options.peg$currPos | 0;
  let peg$savedPos = peg$currPos;
  const peg$posDetailsCache = [{ line: 1, column: 1 }];
  let peg$maxFailPos = peg$currPos;
  let peg$maxFailExpected = options.peg$maxFailExpected || [];
  let peg$silentFails = options.peg$silentFails | 0;

  let peg$result;

  if (options.startRule) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function offset() {
    return peg$savedPos;
  }

  function range() {
    return {
      source: peg$source,
      start: peg$savedPos,
      end: peg$currPos,
    };
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location);
  }

  function peg$getUnicode(pos = peg$currPos) {
    const cp = input.codePointAt(pos);
    if (cp === undefined) {
      return "";
    }
    return String.fromCodePoint(cp);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text, ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase, unicode) {
    return { type: "class", parts, inverted, ignoreCase, unicode };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description };
  }

  function peg$computePosDetails(pos) {
    let details = peg$posDetailsCache[pos];
    let p;

    if (details) {
      return details;
    } else {
      if (pos >= peg$posDetailsCache.length) {
        p = peg$posDetailsCache.length - 1;
      } else {
        p = pos;
        while (!peg$posDetailsCache[--p]) {}
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column,
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos, endPos, offset) {
    const startPosDetails = peg$computePosDetails(startPos);
    const endPosDetails = peg$computePosDetails(endPos);

    const res = {
      source: peg$source,
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column,
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column,
      },
    };
    if (offset && peg$source && (typeof peg$source.offset === "function")) {
      res.start = peg$source.offset(res.start);
      res.end = peg$source.offset(res.end);
    }
    return res;
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parsestart() {
    let s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = peg$parsestatements();
    s2 = peg$currPos;
    peg$silentFails++;
    if (input.length > peg$currPos) {
      s3 = input.charAt(peg$currPos);
      peg$currPos++;
    } else {
      s3 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e0); }
    }
    peg$silentFails--;
    if (s3 === peg$FAILED) {
      s2 = undefined;
    } else {
      peg$currPos = s2;
      s2 = peg$FAILED;
    }
    if (s2 !== peg$FAILED) {
      peg$savedPos = s0;
      s0 = peg$f0(s1);
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsestatements() {
    let s0, s1, s2;

    s0 = peg$currPos;
    s1 = [];
    s2 = peg$parsestatement();
    while (s2 !== peg$FAILED) {
      s1.push(s2);
      s2 = peg$parsestatement();
    }
    peg$savedPos = s0;
    s1 = peg$f1(s1);
    s0 = s1;

    return s0;
  }

  function peg$parsestatement() {
    let s0, s1;

    s0 = peg$currPos;
    s1 = peg$parseexpression_statement();
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$f2(s1);
    }
    s0 = s1;
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      s1 = peg$parsedeclaration_statement();
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$f3(s1);
      }
      s0 = s1;
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        s1 = peg$parsecomment_statement();
        if (s1 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$f4(s1);
        }
        s0 = s1;
        if (s0 === peg$FAILED) {
          s0 = peg$currPos;
          s1 = peg$parseblank_statement();
          if (s1 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$f5(s1);
          }
          s0 = s1;
        }
      }
    }

    return s0;
  }

  function peg$parsecomment_statement() {
    let s0, s1, s2, s3, s4;

    s0 = peg$currPos;
    s1 = [];
    s2 = peg$parsewhitespace();
    while (s2 !== peg$FAILED) {
      s1.push(s2);
      s2 = peg$parsewhitespace();
    }
    if (input.charCodeAt(peg$currPos) === 35) {
      s2 = peg$c0;
      peg$currPos++;
    } else {
      s2 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e1); }
    }
    if (s2 !== peg$FAILED) {
      s3 = [];
      s4 = input.charAt(peg$currPos);
      if (peg$r0.test(s4)) {
        peg$currPos++;
      } else {
        s4 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e2); }
      }
      while (s4 !== peg$FAILED) {
        s3.push(s4);
        s4 = input.charAt(peg$currPos);
        if (peg$r0.test(s4)) {
          peg$currPos++;
        } else {
          s4 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e2); }
        }
      }
      s4 = peg$parseline_ending();
      if (s4 !== peg$FAILED) {
        peg$savedPos = s0;
        s0 = peg$f6();
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseblank_statement() {
    let s0, s1, s2;

    s0 = peg$currPos;
    s1 = [];
    s2 = peg$parsewhitespace();
    while (s2 !== peg$FAILED) {
      s1.push(s2);
      s2 = peg$parsewhitespace();
    }
    s2 = peg$parseline_ending();
    if (s2 !== peg$FAILED) {
      peg$savedPos = s0;
      s0 = peg$f7();
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsedeclaration_statement() {
    let s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10;

    s0 = peg$currPos;
    s1 = [];
    s2 = peg$parsewhitespace();
    while (s2 !== peg$FAILED) {
      s1.push(s2);
      s2 = peg$parsewhitespace();
    }
    if (input.substr(peg$currPos, 3) === peg$c1) {
      s2 = peg$c1;
      peg$currPos += 3;
    } else {
      s2 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e3); }
    }
    if (s2 !== peg$FAILED) {
      s3 = [];
      s4 = peg$parsewhitespace();
      if (s4 !== peg$FAILED) {
        while (s4 !== peg$FAILED) {
          s3.push(s4);
          s4 = peg$parsewhitespace();
        }
      } else {
        s3 = peg$FAILED;
      }
      if (s3 !== peg$FAILED) {
        s4 = peg$parselabel();
        if (s4 !== peg$FAILED) {
          s5 = [];
          s6 = peg$parsewhitespace();
          while (s6 !== peg$FAILED) {
            s5.push(s6);
            s6 = peg$parsewhitespace();
          }
          if (input.charCodeAt(peg$currPos) === 61) {
            s6 = peg$c2;
            peg$currPos++;
          } else {
            s6 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$e4); }
          }
          if (s6 !== peg$FAILED) {
            s7 = [];
            s8 = peg$parsewhitespace();
            while (s8 !== peg$FAILED) {
              s7.push(s8);
              s8 = peg$parsewhitespace();
            }
            s8 = peg$parseexpression();
            if (s8 !== peg$FAILED) {
              s9 = [];
              s10 = peg$parsewhitespace();
              while (s10 !== peg$FAILED) {
                s9.push(s10);
                s10 = peg$parsewhitespace();
              }
              s10 = peg$parseline_ending();
              if (s10 !== peg$FAILED) {
                peg$savedPos = s0;
                s0 = peg$f8(s4, s8);
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseexpression_statement() {
    let s0, s1, s2, s3, s4;

    s0 = peg$currPos;
    s1 = [];
    s2 = peg$parsewhitespace();
    while (s2 !== peg$FAILED) {
      s1.push(s2);
      s2 = peg$parsewhitespace();
    }
    s2 = peg$parseexpression();
    if (s2 !== peg$FAILED) {
      s3 = [];
      s4 = peg$parsewhitespace();
      while (s4 !== peg$FAILED) {
        s3.push(s4);
        s4 = peg$parsewhitespace();
      }
      s4 = peg$parseline_ending();
      if (s4 !== peg$FAILED) {
        peg$savedPos = s0;
        s0 = peg$f9(s2);
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseparameters() {
    let s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10;

    s0 = peg$currPos;
    s1 = [];
    s2 = peg$parsewhitespace();
    while (s2 !== peg$FAILED) {
      s1.push(s2);
      s2 = peg$parsewhitespace();
    }
    s2 = peg$parseexpression();
    if (s2 !== peg$FAILED) {
      s3 = [];
      s4 = peg$parsewhitespace();
      while (s4 !== peg$FAILED) {
        s3.push(s4);
        s4 = peg$parsewhitespace();
      }
      s4 = [];
      s5 = peg$currPos;
      if (input.charCodeAt(peg$currPos) === 44) {
        s6 = peg$c3;
        peg$currPos++;
      } else {
        s6 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e5); }
      }
      if (s6 !== peg$FAILED) {
        s7 = [];
        s8 = peg$parsewhitespace();
        while (s8 !== peg$FAILED) {
          s7.push(s8);
          s8 = peg$parsewhitespace();
        }
        s8 = peg$parseexpression();
        if (s8 !== peg$FAILED) {
          s9 = [];
          s10 = peg$parsewhitespace();
          while (s10 !== peg$FAILED) {
            s9.push(s10);
            s10 = peg$parsewhitespace();
          }
          s6 = [s6, s7, s8, s9];
          s5 = s6;
        } else {
          peg$currPos = s5;
          s5 = peg$FAILED;
        }
      } else {
        peg$currPos = s5;
        s5 = peg$FAILED;
      }
      while (s5 !== peg$FAILED) {
        s4.push(s5);
        s5 = peg$currPos;
        if (input.charCodeAt(peg$currPos) === 44) {
          s6 = peg$c3;
          peg$currPos++;
        } else {
          s6 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e5); }
        }
        if (s6 !== peg$FAILED) {
          s7 = [];
          s8 = peg$parsewhitespace();
          while (s8 !== peg$FAILED) {
            s7.push(s8);
            s8 = peg$parsewhitespace();
          }
          s8 = peg$parseexpression();
          if (s8 !== peg$FAILED) {
            s9 = [];
            s10 = peg$parsewhitespace();
            while (s10 !== peg$FAILED) {
              s9.push(s10);
              s10 = peg$parsewhitespace();
            }
            s6 = [s6, s7, s8, s9];
            s5 = s6;
          } else {
            peg$currPos = s5;
            s5 = peg$FAILED;
          }
        } else {
          peg$currPos = s5;
          s5 = peg$FAILED;
        }
      }
      peg$savedPos = s0;
      s0 = peg$f10(s2, s4);
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      s1 = [];
      s2 = peg$parsewhitespace();
      while (s2 !== peg$FAILED) {
        s1.push(s2);
        s2 = peg$parsewhitespace();
      }
      peg$savedPos = s0;
      s1 = peg$f11();
      s0 = s1;
    }

    return s0;
  }

  function peg$parseexpression() {
    let s0, s1;

    s0 = peg$currPos;
    s1 = peg$parsemethod_call();
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$f12(s1);
    }
    s0 = s1;
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      s1 = peg$parseliteral();
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$f13(s1);
      }
      s0 = s1;
    }

    return s0;
  }

  function peg$parsemethod_call() {
    let s0, s1, s2, s3, s4, s5, s6, s7, s8;
